2020-06-15  Stanislas Rolland  <typo32020(arobas)sjbr.ca>
	* Resolves #90636: ConfigurationHelper Select EncryptionAlgorythm does not work

2019-07-19  Stanislas Rolland  <typo(arobas)sjbr.ca>
	* Resolves Security Ticket#201907155760000027
	* Update version to 2.5.3

2018-11-02  Stanislas Rolland  <typo(arobas)sjbr.ca>
	* Resolves #86843: Syntax error in class EncryptionUtility
	* Update version to 2.5.2

2018-10-24  Stanislas Rolland  <typo(arobas)sjbr.ca>
	* Resolves #86737: Fix syntax error in class PiBaseApi
	* Update version to 2.5.1

2018-10-18  Stanislas Rolland  <typo(arobas)sjbr.ca>
	* Resolves #86688: Migrate to TYPO3 9 LTS
	* Update version to 2.5.0

2018-10-18  Stanislas Rolland  <typo(arobas)sjbr.ca>
	* Resolves #86691: Incorrect keywords for composer
	* Update version to 2.4.4

2018-07-24  Stanislas Rolland  <typo(arobas)sjbr.ca>
	* Resolves #85628: Error in Spanish localization file
	* Resolves #85629: Remove dependency on TYPO3 ClientUtility
	* Resolves #85499: Follow-up to migration from mcrypt to OpenSSL (Thanks to Marcus Bitzl)
	* Update version to 2.4.3

2018-04-02  Stanislas Rolland  <typo(arobas)sjbr.ca>
	* Resolves #84576: Adapt font maker backend module to TYPO3 CMS 7 & 8
	* Update version to 2.4.2

2018-04-01  Stanislas Rolland  <typo(arobas)sjbr.ca>
	* Resolves #83808: Allow translation of invalid input error (Thanks to Christian Toffolo)

2017-12-20  Stanislas Rolland  <typo(arobas)sjbr.ca>
	* Update manual

2017-12-19  Stanislas Rolland  <typo(arobas)sjbr.ca>
	* Resolves #80906: Unknown Exception thrown when domain model with validator is used in backend context
	* Resolves #82716: Migrate from mcrypt to openssl (follow-up)
	* Update version to 2.4.1

2017-10-16  Stanislas Rolland  <typo(arobas)sjbr.ca>
	* Resolves #82716: Migrate from mcrypt to openssl
	* Resolves #81736: Add P3P header for IE 11 of Windows 7 when page opens in popup

2017-05-28  Stanislas Rolland  <typo(arobas)sjbr.ca>
	* Resolves #81354: Error code not localized
